--- a/blog/discovering-the-northern-lights-in-iceland.mdx
+++ b/blog/discovering-the-northern-lights-in-iceland.mdx
@@ -1,10 +1,13 @@
 ---
-title: "Chasing the Northern Lights in Iceland"
+title: "Discovering the Northern Lights in Iceland"
 date: "2023-12-25"
 author: "Elena Rodriguez"
 category: "Adventure"
-image: "northern-lights-iceland.jpeg"
+image: "../images/northern-lights-iceland.jpeg"
 imageAlt: "A stunning view of the Northern Lights in Iceland"
+slug: "discovering-the-northern-lights-in-iceland"
+keywords: "Northern Lights, Iceland, Natural Wonders"
+lang: "en-US"
 ---
 
 Iceland, a land of enchantment and natural wonders, is home to one of the most mesmerizing phenomena on Earth – the Northern Lights. Also known as the Aurora Borealis, this celestial display of dancing lights in the night sky is a breathtaking experience for any adventurer.
