--- a/blog/exploring-modern-marvels-architecture-across-the-globe.mdx
+++ b/blog/exploring-modern-marvels-architecture-across-the-globe.mdx
@@ -3,8 +3,11 @@ title: "Exploring Modern Marvels: Architecture Across the Globe"
 date: "2024-01-31"
 author: "Daniel Anderson"
 category: "Architectural Wonders"
-image: "./architectural-marvels-cern.jpeg"
+image: "../images/architectural-marvels-cern.jpeg"
 imageAlt: "Architectural marvels at CERN"
+slug: "exploring-modern-marvels-architecture-across-the-globe"
+keywords: "Modern Marvels, Architecture, CERN"
+lang: "en-US"
 ---
 
 Architectural enthusiast Daniel Anderson invites you on a captivating journey across the globe to explore modern marvels. From the sleek designs of urban skyscrapers to the groundbreaking structures at CERN, witness the fusion of art and engineering. Join Daniel in uncovering architectural wonders that redefine the skyline and push the boundaries of innovation.
