--- a/blog/mindful-retreat-finding-serenity-in-Bali.mdx
+++ b/blog/mindful-retreat-finding-serenity-in-Bali.mdx
@@ -3,8 +3,11 @@ title: "Mindful Retreat: Finding Serenity in Bali"
 date: "2024-01-20"
 author: "Jonathan Carter"
 category: "Wellness"
-image: "./mindfulness-retreat-bali.jpeg"
+image: "../images/mindfulness-retreat-bali.jpeg"
 imageAlt: "A peaceful scene from a mindfulness retreat in Bali"
+slug: "mindful-retreat-finding-serenity-in-Bali"
+keywords: "Bali, retreats, serenity"
+lang: "en-UK"
 ---
 
 Join wellness advocate Jonathan Carter on a transformative journey to Bali, where tranquility meets tropical paradise. Discover the art of mindfulness amidst serene landscapes. From peaceful retreats to the rhythmic sounds of nature, find your inner peace in the heart of Bali. Let Jonathan guide you through a mindful retreat that rejuvenates both body and soul.
