--- a/blog/gastronomic-adventure-in-tuscany-Italy.mdx
+++ b/blog/gastronomic-adventure-in-tuscany-Italy.mdx
@@ -1,10 +1,13 @@
 ---
 title: "A Gastronomic Adventure in Tuscany, Italy"
-date: "2024-01-15"
+date: "2024-01-10"
 author: "Sophia Davis"
 category: "Food"
-image: "./italian-cuisine-tuscany.jpeg"
+image: "../images/italian-cuisine-tuscany.jpeg"
 imageAlt: "A delicious spread of Italian cuisine in Tuscany"
+slug: "gastronomic-adventure-in-tuscany-Italy"
+keywords: "gastronomy, Tuscany, Italy"
+lang: "en-AU"
 ---
 
 Embark on a culinary escapade through the picturesque landscapes of Tuscany, Italy, guided by food enthusiast Sophia Davis. Delight your senses with the rich flavors of Italian cuisine, from pasta to olive oil. Immerse yourself in the essence of Tuscany's gastronomic wonders, a journey that promises to leave your taste buds dancing with joy.
